methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var biscuit=0
  while (biscuit==0){
    forward()
    if (getGroundColor()==Color.green){
      backward()
      forward()
      baisseBrosse()
      leveBrosse()
      if (estSurBiscuit()){
        prendBiscuit()
        biscuit = biscuit + 1
      }
    }
    else {
      backward()
      left()
      forward()
    	if (x==Color.green){
      	forward()
        baisseBrosse()
        leveBrosse()
        if (estSurBiscuit()){
        	prendBiscuit()
        	biscuit = biscuit + 1
        }
      else {
        backward()
        right()
      }
    }
    }
  return true    
  }
}